# snowmobile

./: .gitignore  .pypirc  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  README.md  coverage.xml  pyproject.toml
.github/workflows/: workflow.yml
docs/: Makefile  README.md  acknowledgements.md  authors.md  badges.md  conf.py  description.md  environment_docs.yml  index.ipynb  license.md  requirements.txt  setup.md  snippets.md
docs/_static/css/: application_ext.css  emacs.css  friendly.css
docs/_static/js/: darkreader.js  dynamic-theme-fixes.confg  ios.js  resize.js  scrollbar.js  theme.js
docs/ext/: __init__.py  autoapi_myst.py  snippets.py  xref.py
docs/links/: __init__.py  dataframe.py  ddl.py  link.py  pydantic.py  pydantics.py  snowflake.py  snowflake_bulk_loading.py  snowflake_connect.py  snowflake_connection.py  snowflake_connection_full.py  snowflake_connector.py  snowflake_connector_execute_stream.py  snowflake_connector_execute_stream2.py  snowflake_connector_trunc.py  snowflake_copy_into.py  snowflake_cursor.py  snowflake_cursor_full.py  snowflake_db.py  snowflake_dictcursor.py  snowflake_file_format.py  snowflake_put.py  snowmobile.py  sqlparse.py
docs/snippets/: configuration.py  connector_alias_order.py  dummy_table.sql  export_config.py  instantiate_configuration.py  instantiate_connector.py  intro_connector.py  markup_with_results.md  markup_with_results.sql  set_obj_name.py  snowmobile_set_default_creds.toml  sql_working_example.py  sql_working_example2.py  test_connection.py
docs/snippets/configuration/: inspect_configuration.py
docs/snippets/overview/: any_other_table.sql  overview.py  sample_table.sql
docs/snippets/script/: a-few-statements.py  a-few-statements.sql  a-few-tagged-statements.py  a-few-tagged-statements.sql  any_other_table.sql  intro.py  intro.sql  keyword_exceptions.sql  marker.sql  markup.sql  model-intro.py  overview-base-sn.sql  overview-base.sql  overview-statement-intro.py  overview-statement-names.py  overview.sql  overview2.sql  tags_multi-line.sql  tags_single-line.sql
docs/snippets/script/.snowmobile/intro/: intro.md  intro.sql
docs/snippets/script/intro/: intro1.py  intro1.sql
docs/snippets/snowmobile/: connecting.py  connector_cursor_note.py  connector_delayed1.py  connector_delayed2.py  ensure_alive.py  executing.py  inspect_connector.py  specifying_configuration.py  specifying_configuration2.py  verify_default_alias_change.py
docs/snippets/sql/: sql_cross_schema.py
docs/usage/: (default) markup_with_results.md  (default) markup_with_results.sql  advanced.ipynb  markup_with_results.sql  script.md  snowmobile.md  snowmobile_toml.md  sql.ipynb  table.ipynb  table.md
requirements/: environment.yml  requirements.txt  requirements_37.reqs  requirements_37_dev.reqs
snowmobile/: __init__.py
snowmobile/core/: __init__.py  base.py  cache.py  column.py  configuration.py  connection.py  errors.py  exception_handler.py  markup.py  name.py  paths.py  qa.py  scope.py  script.py  section.py  snowframe.py  sql.py  statement.py  table.py  tag.py
snowmobile/core/cfg/: __init__.py  base.py  connection.py  extensions.py  loading.py  script.py  sql.py
snowmobile/core/pkg_data/: DDL.sql  snowmobile-ext.toml  snowmobile-template.toml  sql_export_heading.txt
snowmobile/core/pkg_data/.snowmobile/: export_ddl.py
snowmobile/core/pkg_data/.snowmobile/DDL/: DDL.md  DDL.sql
snowmobile/core/utils/: __init__.py  console.py  parsing.py
test/: __init__.py  conftest.py
test/data/sql/: generic_script.sql  markers_duplicates.sql  markers_standard.sql  markup_no_results.sql  markup_template_anchor.sql  mod_sql_unit_input.json  mod_sql_unit_validation.sql  no_tags.sql  qa_statements.sql  tags_qa_statements.sql
test/data/sql/.snowmobile/: export_test_cases.py
test/data/sql/.snowmobile/expected_outcomes/markup_no_results/: (default) markup_no_results.md  (default) markup_no_results.sql  (no markers) markup_no_results.md  (no markers) markup_no_results.sql
test/data/sql/.snowmobile/expected_outcomes/markup_template_anchor/: (default) markup_template_anchor.md  (default) markup_template_anchor.sql  (no markers) markup_template_anchor.md  (no sql) markup_template_anchor.md
test/data/sql/.snowmobile/expected_outcomes/markup_with_results/: (default) markup_with_results.md  (default) markup_with_results.sql  (no disclaimer, no markers) markup_with_results.sql  (no markers) markup_with_results.md  (no markers) markup_with_results.sql  (no sql) markup_with_results.md
test/data/sql/.snowmobile/markup_no_results/: (default) markup_no_results.md  (default) markup_no_results.sql  (no disclaimer, no markers) markup_no_results.sql  (no markers) markup_no_results.md  (no markers) markup_no_results.sql  (no sql) markup_no_results.md
test/data/sql/.snowmobile/markup_template_anchor/: (default) markup_template_anchor.sql  (no markers) markup_template_anchor.md  (no markers) markup_template_anchor.sql  (no sql) markup_template_anchor.md
test/data/sql/.snowmobile/markup_with_results/: (default) markup_with_results.sql  (no markers) markup_with_results.md  (no markers) markup_with_results.sql  (no sql) markup_with_results.md
test/func/: conftest.py  test_configuration.py  test_connection.py  test_markers.py  test_parsing.py  test_scope.py  test_statement.py  test_statement_diff.py  test_table.py  test_tag.py
test/func/script/: test_script.py  test_script_markup.py  test_script_qa.py
test/unit/: __init__.py  conftest.py  test_exception_handler.py  test_sql.py
